# z2l

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  bootstrap  configure.ac
src/bash_completion/: z2l.sh
src/data/fw/pfs/: Makefile  pfs.bb  pfs.sh
src/data/hw/tcl/: arg.tcl  bit.tcl  dst.tcl  gui.tcl
src/data/sw/pkg/: chrony.mk  fsio.mk  pugixml.mk  rsync.mk  si53xx.mk  xxd.mk  zelsius  zelsius.mk
src/man/: z2l.1
